--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ pillow==10.4.0
 protobuf==4.25.4
 Pygments==2.18.0
 PySocks==1.7.1
+pytesseract==0.3.13
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
